src/objects/BGBK__Payment_Method__mdt.object
<CustomObject>
    <fields>
        <fullName>BGBK__Gateway_Host_Page_Url__c</fullName>
        <description>Gateway form page url</description>
        <inlineHelpText>(Optional) Set this to the gateway form page url if the form needs to be on BG and not a redirect</inlineHelpText>
        <label>Gateway Host Page Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BGBK__Lightning_Component__c</fullName>
        <label>Lightning Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BGBK__Payment_Icon__c</fullName>
        <label>Payment Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Receipt_Fields__c</fullName>
        <label>Receipt Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBK__isGateway_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gateway Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBK__isPortal_Accessible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal Accessible</label>
        <type>Checkbox</type>
    </fields>
    <label>Payment Method</label>
    <pluralLabel>Payment Methods</pluralLabel>
</CustomObject>